--- a/calculate/android/app/src/main/AndroidManifest.xml
+++ b/calculate/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.calculate">
    <application
-        android:label="calculate"
+        android:label="BMI calc"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
